--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constriant_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -22,7 +23,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/box_t_two"
+        android:id="@+id/box_two_text"
         style="@style/WhiteBox"
         android:layout_width="130dp"
         android:layout_height="130dp"
@@ -33,21 +34,21 @@
         app:layout_constraintTop_toBottomOf="@+id/box_one_text" />
 
     <TextView
-        android:id="@+id/box_text_three"
+        android:id="@+id/box_three_text"
         style="@style/WhiteBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_wide"
         android:layout_marginEnd="@dimen/margin_wide"
         android:text="@string/box_three"
-        app:layout_constraintBottom_toTopOf="@+id/box_text_four"
+        app:layout_constraintBottom_toTopOf="@+id/box_four_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/box_t_two"
-        app:layout_constraintTop_toTopOf="@+id/box_t_two" />
+        app:layout_constraintStart_toEndOf="@+id/box_two_text"
+        app:layout_constraintTop_toTopOf="@+id/box_two_text" />
 
     <TextView
-        android:id="@+id/box_text_four"
+        android:id="@+id/box_four_text"
         style="@style/WhiteBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -56,22 +57,22 @@
         android:layout_marginEnd="@dimen/margin_wide"
         android:layout_marginBottom="@dimen/margin_wide"
         android:text="@string/box_four"
-        app:layout_constraintBottom_toTopOf="@+id/box_text_five"
+        app:layout_constraintBottom_toTopOf="@+id/box_five_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/box_t_two"
-        app:layout_constraintTop_toBottomOf="@+id/box_text_three" />
+        app:layout_constraintStart_toEndOf="@+id/box_two_text"
+        app:layout_constraintTop_toBottomOf="@+id/box_three_text" />
 
     <TextView
-        android:id="@+id/box_text_five"
+        android:id="@+id/box_five_text"
         style="@style/WhiteBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_wide"
         android:layout_marginEnd="@dimen/margin_wide"
         android:text="@string/box_five"
-        app:layout_constraintBottom_toBottomOf="@+id/box_t_two"
+        app:layout_constraintBottom_toBottomOf="@+id/box_two_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/box_t_two"
-        app:layout_constraintTop_toBottomOf="@+id/box_text_four" />
+        app:layout_constraintStart_toEndOf="@+id/box_two_text"
+        app:layout_constraintTop_toBottomOf="@+id/box_four_text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
