Changed code to make the three button to change the boxes colors.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -126,7 +126,8 @@
         app:layout_constraintEnd_toStartOf="@+id/green_button"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/red_button"
-        app:layout_constraintTop_toBottomOf="@+id/info_text" />
+        app:layout_constraintTop_toBottomOf="@+id/info_text"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/green_button"
